# arr-stack

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  renovate.json  spec.md
tools/arr-dashboard/: Dockerfile  pyproject.toml
tools/arr-dashboard/arr_dashboard/: __main__.py  actions.py  app.py  cache.py  correlate.py  diagnostics.py  import_runner.py  models.py  recovery_actions.py  settings.py  sources.py
tools/arr-dashboard/tests/: conftest.py  test_actions.py  test_app.py  test_cache.py  test_correlate.py  test_diagnostics.py  test_import_runner.py  test_models.py  test_recovery_actions.py  test_settings.py  test_sources.py  test_sources_builders.py
tools/arr-dashboard/web/: index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
tools/arr-dashboard/web/src/: App.svelte  api.ts  main.ts
tools/arr-dashboard/web/src/i18n/: fr.ts
tools/arr-dashboard/web/src/lib/: ActionsPanel.svelte  ChainPastilles.svelte  ConfirmDialog.svelte  ImportButton.svelte  RowDetail.svelte
tools/arrconf/: .dockerignore  Dockerfile  README.md  pyproject.toml
tools/arrconf-mcp/: Dockerfile  README.md  pyproject.toml
tools/arrconf-mcp/arrconf_mcp/: __main__.py  clients.py  formatting.py  guardrails.py  http.py  server.py  settings.py
tools/arrconf-mcp/tests/: conftest.py  test_clients.py  test_http.py  test_server.py  test_tools_action.py  test_tools_destructive.py  test_tools_read.py
tools/arrconf-ui/: pyproject.toml
tools/arrconf-ui/arrconf_ui/: __init__.py  __main__.py  app.py  configarr_config.py  configarr_diff.py  configarr_io.py  configarr_schema_gen.py  diff.py  io.py  locator.py
tools/arrconf-ui/tests/: conftest.py  test_app_endpoints.py  test_cli.py  test_configarr_ci_gate.py  test_configarr_diff.py  test_configarr_endpoints.py  test_configarr_leak.py  test_configarr_model.py  test_diff.py  test_intent_endpoints.py  test_io_roundtrip.py  test_locator.py  test_trash_endpoints.py
tools/arrconf-ui/tests/fixtures/: roundtrip_sample.yml
tools/arrconf-ui/web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
tools/arrconf-ui/web/src/: App.svelte  api.ts  app.css  constants.ts  main.ts  schema.ts  types.ts
tools/arrconf-ui/web/src/i18n/: fr.ts
tools/arrconf-ui/web/src/lib/: AppSection.svelte  CategoriesEditor.svelte  CategoryRow.svelte  ConfigarrRawEditor.svelte  DiffPanel.svelte  FieldInput.svelte  HeaderBar.svelte  HelpTooltip.svelte  MaterializationDiffPanel.svelte  ProfileCard.svelte  ProfileDefinitionsEditor.svelte  ReadOnlyInspector.svelte  RecyclarrReferencePicker.svelte  SaveToast.svelte  SectionDoc.svelte  Spinner.svelte  SuggestArrBadge.svelte  ThemeToggle.svelte  TrashCFPicker.svelte  TrashQPPicker.svelte  ValidationBanner.svelte  theme.ts
tools/arrconf/arrconf/: __init__.py  __main__.py  audit.py  client_base.py  config.py  diff_cmd.py  differ.py  dump.py  exceptions.py  intent_config.py  logging.py  schema_gen.py  settings.py
tools/arrconf/arrconf/generators/: __init__.py  categories.py  configarr.py  intent.py  sagas.py
tools/arrconf/arrconf/reconcilers/: __init__.py  _category_profiles.py  _category_tags.py  _shared.py  _unmonitor.py  jellyfin.py  prowlarr.py  qbittorrent.py  radarr.py  seerr.py  sonarr.py
tools/arrconf/arrconf/resources/: __init__.py  categories.py
tools/arrconf/arrconf/resources/jellyfin/: __init__.py  library.py  plugin.py  server_config.py  user_policy.py
tools/arrconf/arrconf/resources/prowlarr/: __init__.py  application.py
tools/arrconf/arrconf/resources/qbittorrent/: __init__.py  category.py  preferences.py
tools/arrconf/arrconf/resources/radarr/: __init__.py  collection.py  custom_format.py  (+3 more)
tools/arrconf/tests/: _arrconf_helpers.py  _phase9_helpers.py  conftest.py  test_apply_category_tags_wiring.py  test_apply_requires_intent.py  test_arrconf_yml_validates.py  test_audit.py  test_categories.py  test_category_profiles.py  test_category_tags.py  test_catmig_01_contract.py  test_cli.py  test_client_base_4xx_logging.py  test_client_read_methods.py  test_config.py  test_config_validation.py  test_configarr_three_profiles.py  test_content_tags.py  test_diff_cmd.py  test_differ.py  test_dump.py  test_generate_arrconf_yml.py  test_generate_cmd.py  test_generate_configarr.py  test_generate_cross_seed.py  test_generate_qbit_manage.py  test_generators_categories.py  test_generators_sagas.py  test_idempotence_fp.py  test_intent_config.py  test_intent_config_saga_entry.py  test_jellyfin_categories.py  test_managed_tag.py  test_merge_with_manual.py  test_movie_editor.py  test_phase10_idempotence_sweep.py  test_phase9_no_regression.py  test_qbit_credentials_env_fallback.py  test_qbittorrent_categories.py  test_radarr_categories.py  (+19 more)
tools/arrconf/tests/fixtures/: phase10-baseline-plans.json  phase9-baseline-plans.json
(+1051 files in other folders)
