[project]
name = "arrconf"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "typer>=0.25.0,<0.26",
  "httpx>=0.28.0,<0.29",
  "pydantic>=2.13,<3",
  "pydantic-settings>=2.14,<3",
  "ruyaml>=0.91,<0.92",
  "structlog>=25.5,<26",
  "tenacity>=9.1,<10",
]

[project.scripts]
arrconf = "arrconf.__main__:app"

[dependency-groups]
dev = [
  "pytest>=9.0,<10",
  "pytest-cov>=7.1,<8",
  "respx>=0.23,<0.24",
  "ruff>=0.15,<0.16",
  "mypy>=2.0,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
# Sonarr/Radarr APIs use camelCase field names; pydantic models must match (D-21).
"arrconf/resources/**" = ["N815"]
# typer.Option(...) in argument defaults is the canonical typer CLI pattern.
"arrconf/__main__.py" = ["B008"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-v --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
source = ["arrconf.differ", "arrconf.reconcilers.sonarr"]
branch = true

[tool.coverage.report]
fail_under = 70
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:"]
